# Whisper-WebUI

./: .gitignore  API.md  README.md  pyproject.toml  run.py  run_api.py
src/webui/: app.py  speech_to_text_core.py
templates/: index.html
